fix(web/static/css): Improve paragraph & line heights
The text was a little cramped, which made the font hard to read. If
one gives it a little more breathing space, it gets easier to digest.

I couldn’t check the change locally, since `-A web.tvl` doesn’t
reference the static assets (it hardlinks to `static.tvl.su` from what
I can see). I only tested it directly in the browser css editor and
then added the values I found here.

--- a/web/static/tvl.css
+++ b/web/static/tvl.css
@@ -43,6 +43,17 @@ h1, h2, h3 {
     line-height: 1.2
 }
 
+/* Blog Posts */
+
+article {
+    line-height: 1.5em;
+}
+
+/* spacing between the paragraphs in blog posts */
+article p {
+    margin: 1.4em auto;
+}
+
 /* Homepage styling */
 
 .dark {
